--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Questions#index</h1>
-<p>Find me in app/views/questions/index.html.erb</p>
+<h2>Questions</h2>
+<div class= 'row'>
+ <div class= 'col-md-12'>
+  <table clas='table table-striped'>
+   <thead class= 'thead-light'>
+    <tr>
+     <th>ID</th>
+     <th>Title</th>
+     <th>Menu</th>
+    </tr>
+  </thead>
+  <tbody>
+   <% @questions.each do |question| %>
+    <tr>
+     <td><%= question.id %></td>
+     <td><%= question.title %></td>
+     <td>[Edit][Delate]</td>
+   <% end %>
+</div>
