--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Questions</h2>
 <div class= 'row'>
  <div class= 'col-md-12'>
-  <table clas='table table-striped'>
+  <table class='table table-striped'>
    <thead class= 'thead-light'>
     <tr>
      <th>ID</th>
