--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -14,7 +14,7 @@
       <tr>
       <td><%= question.id %></td>
       <td><%= question.title %></td>
-      <td>[Edit][Delate]</td>
+      <td>[<%=  link_to 'Edit', edit_question_path(question) %>]</td>
       </tr>
     <% end %>
   </tbody>
