--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div>
-     <%= link_to 'Home', root_path %>
+     <%= link_to '>Home', root_path %>
     </div>
    </div>
   </div>
